--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'org.jetbrains.anko:anko:0.10.1'
+
+    implementation 'org.jetbrains.anko:anko-appcompat-v7:0.10.1'
+    implementation 'org.jetbrains.anko:anko-design:0.10.1'
+    implementation 'org.jetbrains.anko:anko-recyclerview-v7:0.10.1'
+    implementation 'org.jetbrains.anko:anko-cardview-v7:0.10.1'
 }
