--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tascs">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".SignUpActivity" android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
+        <activity android:name=".LoginActivity" android:theme="@style/Theme.MaterialComponents.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
